# draws

./: .flake8  .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml
.github/workflows/: merge.yml  publish.yml
examples/: build.py
examples/templates/: ApiEventBridgeLambdaStack.template.json  ServerlessBackendStack.template.json  api-gateway-covid19-tracker.template.json  app-sync-graphql-dynamodb.template.json  lambda-layer.template.json  s3-trigger.template.json
infra/: api_to_s3_stack.py  s3_bucket_stack.py
src/assets/svg_defs/: font.html  style.html
src/draws/: __init__.py  colors.py  constants.py  diagram.py  graph.py  icons.py  layout.py  renderer.py  template.py
tests/diagram/: conftest.py  test_diagram.py
tests/graph/: conftest.py  test_graph.py
tests/template/: conftest.py  test_template.py
